# docker_day_one

./: README.md  docker-compose.yaml  dockerfile  my_command_history.txt
POM/: conf_test.py  conftest.py
POM/conf/: conf_test.py  config.py
POM/pages/: BasePage.py  LoginPage.py
POM/test/: test_login.py
docker_task/: docker-compose.yaml
python_assignment/: py_task.py
react-mernstack-crud/: command_history.txt  docker-compose.yml
react-mernstack-crud/backend/: Dockerfile  index.js
react-mernstack-crud/backend/Models/: Student.js
react-mernstack-crud/backend/routes/: student.routes.js
react-mernstack-crud/frontend/: Dockerfile
react-mernstack-crud/frontend/src/components/: CreateStudent.js  EditStudent.js  StudentList.js
selenium/: Locatorname.py  Locatorswithtagname.py  findlinks.py  locatorconcept.py  selenium_webd.py
task_py2/: MAC_address.txt  main.py  pyproject.toml
testpy/: .gitignore  main.py  pyproject.toml
testpy/pythonSessions/: google_test_report.html  test_demo1.py  test_demo2.py  test_demo3.py  test_fixture_classes.py  test_fixture_params.py  test_google_fixture.py  test_google_fixture_report.html  test_google_test.py  test_webPage_login.py
testpy/pythonSessions/POM/: .pdm-python
testpy/pythonSessions/POM/conf/: conf_test.py  config.py
testpy/pythonSessions/POM/pages/: BasePage.py  LoginPage.py
testpy/pythonSessions/POM/test/: test_login.py
testpy/pythonSessions/pythonrough/: TestRough1.py  TestRough2.py  conftest.py
